updates trying to enable sanity

--- a/shopify/src/theme.liquid
+++ b/shopify/src/theme.liquid
@@ -23,8 +23,8 @@ itself. Reach out a developer for help installing scripts and code snippets.
        */
       if (/^\/a\//.test(l.pathname)) {
         // do nothing
-      } else {    
-        var href = 'midway-starter.netlify.com'
+      } else {
+        var href = 'hungry-dubinsky-4c5dfe.netlify.com'
         if (l.pathname) href += '/' + l.pathname
         if (l.hash) href += l.hash
         if (l.search) href += l.search
