update for test

--- a/shopify/src/theme.liquid
+++ b/shopify/src/theme.liquid
@@ -24,7 +24,7 @@ itself. Reach out a developer for help installing scripts and code snippets.
       if (/^\/a\//.test(l.pathname)) {
         // do nothing
       } else {
-        var href = 'hungry-dubinsky-4c5dfe.netlify.com'
+        var href = 'tasty-midway-maker.netlify.com'
         if (l.pathname) href += '/' + l.pathname
         if (l.hash) href += l.hash
         if (l.search) href += l.search
